portfolio section setup do

--- a/index.html
+++ b/index.html
@@ -89,66 +89,48 @@
         <div class="swiper my-swiper">
             <div class="swiper-wrapper" id="swiper-wrapper">
 
-                <div class="swiper-slide">
-                    <div class="swiper-overlay">
-                        <button class="btn-show-more">Show more</button>
-                    </div>
+                <div class="swiper-slide" id="swiper-slide1">
+                    <div class="swiper-overlay"></div>
                     <img src="/assets/img/austin-schmid-0asZ7HcEHSQ-unsplash.jpg" alt="">
                 </div>
 
-                <div class="swiper-slide">
-                    <div class="swiper-overlay">
-                        <button class="btn-show-more">Show more</button>
-                    </div>
+                <div class="swiper-slide" id="swiper-slide2">
+                    <div class="swiper-overlay"></div>
                     <img src="/assets/img/dave-goudreau-OxtLUqXKW-Y-unsplash.jpg" alt="">
                 </div>
 
-                <div class="swiper-slide">
-                    <div class="swiper-overlay">
-                        <button class="btn-show-more">Show more</button>
-                    </div>
+                <div class="swiper-slide" id="swiper-slide3">
+                    <div class="swiper-overlay"></div>
                     <img src="/assets/img/eugene-golovesov-f6lbUDprkoQ-unsplash.jpg" alt="">
                 </div>
 
-                <div class="swiper-slide">
-                    <div class="swiper-overlay">
-                        <button class="btn-show-more">Show more</button>
-                    </div>
+                <div class="swiper-slide" id="swiper-slide4">
+                    <div class="swiper-overlay"></div>
                     <img src="/assets/img/ian-talmacs-pe6U_FqAXvU-unsplash.jpg" alt="">
                 </div>
 
-                <div class="swiper-slide">
-                    <div class="swiper-overlay">
-                        <button class="btn-show-more">Show more</button>
-                    </div>
+                <div class="swiper-slide" id="swiper-slide5">
+                    <div class="swiper-overlay"></div>
                     <img src="/assets/img/janmesh-shah-EXyVT3q4J_8-unsplash.jpg" alt="">
                 </div>
 
-                <div class="swiper-slide">
-                    <div class="swiper-overlay">
-                        <button class="btn-show-more">Show more</button>
-                    </div>
+                <div class="swiper-slide" id="swiper-slide6">
+                    <div class="swiper-overlay"></div>
                     <img src="/assets/img/kellen-riggin-G9SJLINNdcA-unsplash.jpg" alt="">
                 </div>
 
-                <div class="swiper-slide">
-                    <div class="swiper-overlay">
-                        <button class="btn-show-more">Show more</button>
-                    </div>
+                <div class="swiper-slide" id="swiper-slide7">
+                    <div class="swiper-overlay"></div>
                     <img src="/assets/img/nantu-das-wYJM9PCbURg-unsplash.jpg" alt="">
                 </div>
 
-                <div class="swiper-slide">
-                    <div class="swiper-overlay">
-                        <button class="btn-show-more">Show more</button>
-                    </div>
+                <div class="swiper-slide" id="swiper-slide8">
+                    <div class="swiper-overlay"></div>
                     <img src="/assets/img/wolfgang-hasselmann--AuNuqFUPQ8-unsplash.jpg" alt="">
                 </div>
 
-                <div class="swiper-slide">
-                    <div class="swiper-overlay">
-                        <button class="btn-show-more">Show more</button>
-                    </div>
+                <div class="swiper-slide" id="swiper-slide9">
+                    <div class="swiper-overlay"></div>
                     <img src="/assets/img/wolfgang-hasselmann-jl3bltYgs8c-unsplash.jpg" alt="">
                 </div>
 
@@ -158,30 +140,8 @@
         </div>
     </section>
 
-    <div class="portfolio-details">
-        <div class="portfolio-details-container">
-
-            <div class="project-details">
-                <h3 class="project-title">Project tile</h3>
-                <p class="project-details-describe">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                    do eiusmod tempor incididunt ut labore et dolore magna aliqua. Mattis pellentesque id nibh
-                    tortor id aliquet lectus proin.</p>
-            </div>
-
-            <div class="project-button-container">
-                <a class="btn-project" href="#">
-                    <i class="fa-solid fa-circle-arrow-right"></i>
-                    <p class="project-btn-text">Go to the project</p>
-                </a>
-
-                <a class="btn-project" href="#">
-                    <i class="fa-brands fa-github"></i>
-                    <p class="project-btn-text">Check the code</p>
-                </a>
-            </div>
-        </div>
-    </div>
-
+    <div id="portfolio-details"></div>
+    <div class="portfolio-details-container hidden"></div>
 
     <!-- About -->
     <div class="nav-placeholder" id="about"></div>
