--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
     <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
 
+
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js" defer></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
 
@@ -27,10 +28,12 @@
     <script src="/data/design-skills.js"></script>
     <script src="/js/app.js" defer></script>
 
+    <link rel="icon" href="assets/img/GS-icon.svg">
     <title>SG Portfolio</title>
 </head>
 
 <body>
+
     <!-- Navigation -->
 
     <header class="header">
@@ -65,7 +68,7 @@
 
 
 
-    <!-- Main -->
+    <!-- Main image -->
     <section class="main-container">
         <div class="image-container"></div>
         <div class="name-container">
@@ -79,6 +82,7 @@
 
 
     <!-- Portfolio -->
+
     <div class="nav-placeholder" id="portfolio"></div>
     <div class="title-container">
         <p class="title-back">Portfolio</p>
@@ -143,7 +147,10 @@
     <div id="portfolio-details"></div>
     <div class="portfolio-details-container hidden"></div>
 
+
+
     <!-- About -->
+
     <div class="nav-placeholder" id="about"></div>
 
     <div class="title-container">
@@ -157,11 +164,22 @@
             <p class="image-name">Gabor</p>
             <p class="image-name">Szabo</p>
         </picture>
+        <div class="introduction-text-container">
+            <p class="introduction-text">Welcome to my portfolio page. I created this page to showcase my progress, if
+                you
+                haven't found a project that piqued your interest, come back in a month.
+            </p>
+            <p class="introduction-text">I am a creative, open personality with a solution-oriented, practical attitude.
+                My
+                goal is to deepen and
+                broaden my knowledge in the field of front-end development and expand my knowledge of new technologies.
+                I am
+                confident that with my previous graphics knowledge and experience, I can create beautiful and
+                easy-to-use
+                UIs.
+            </p>
 
-        <p class="introduction-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-            incididunt ut labore et dolore magna aliqua. Mattis pellentesque id nibh tortor id aliquet lectus proin.
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna aliqua. Mattis pellentesque id nibh tortor id aliquet lectus proin.</p>
+        </div>
     </div>
 
 
@@ -176,7 +194,10 @@
         </a>
     </div>
 
+
+
     <!-- Contact -->
+
     <div class="nav-placeholder" id="contact"></div>
 
     <div class="title-container">
@@ -204,7 +225,10 @@
         </div>
     </div>
 
+
+
     <!-- Footer -->
+
     <footer class="footer">
         <div class="footer-container">
             <a href="#" class="logo">
