Update portfolio with images

--- a/index.html
+++ b/index.html
@@ -95,27 +95,27 @@
 
                 <div class="swiper-slide" id="swiper-slide1">
                     <div class="swiper-overlay"></div>
-                    <img src="/assets/img/austin-schmid-0asZ7HcEHSQ-unsplash.jpg" alt="">
+                    <img src="/assets/img/Gagarin-gallery.png" alt="">
                 </div>
 
                 <div class="swiper-slide" id="swiper-slide2">
                     <div class="swiper-overlay"></div>
-                    <img src="/assets/img/dave-goudreau-OxtLUqXKW-Y-unsplash.jpg" alt="">
+                    <img src="/assets/img/WeatherApp-React.png" alt="">
                 </div>
 
                 <div class="swiper-slide" id="swiper-slide3">
                     <div class="swiper-overlay"></div>
-                    <img src="/assets/img/eugene-golovesov-f6lbUDprkoQ-unsplash.jpg" alt="">
+                    <img src="/assets/img/WeatherApp-JS.png" alt="">
                 </div>
 
                 <div class="swiper-slide" id="swiper-slide4">
                     <div class="swiper-overlay"></div>
-                    <img src="/assets/img/ian-talmacs-pe6U_FqAXvU-unsplash.jpg" alt="">
+                    <img src="/assets/img/Nasa-IoTD.png" alt="">
                 </div>
 
                 <div class="swiper-slide" id="swiper-slide5">
                     <div class="swiper-overlay"></div>
-                    <img src="/assets/img/janmesh-shah-EXyVT3q4J_8-unsplash.jpg" alt="">
+                    <img src="/assets/img/Behance-Sitebuild.png" alt="">
                 </div>
 
             </div>
