--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <header class="header">
         <nav class="navbar__container">
             <a href="#" class="logo">
-                <img src="/assets/img/GS-logo.svg" alt="Logo" />
+                <img src="assets/img/GS-logo.svg" alt="Logo" />
                 <div class="logo-underline"></div>
             </a>
             <div class="navigation-container">
@@ -95,27 +95,27 @@
 
                 <div class="swiper-slide" id="swiper-slide1">
                     <div class="swiper-overlay"></div>
-                    <img src="/assets/img/Gagarin-gallery.png" alt="">
+                    <img src="assets/img/Gagarin-gallery.png" alt="">
                 </div>
 
                 <div class="swiper-slide" id="swiper-slide2">
                     <div class="swiper-overlay"></div>
-                    <img src="/assets/img/WeatherApp-React.png" alt="">
+                    <img src="assets/img/WeatherApp-React.png" alt="">
                 </div>
 
                 <div class="swiper-slide" id="swiper-slide3">
                     <div class="swiper-overlay"></div>
-                    <img src="/assets/img/WeatherApp-JS.png" alt="">
+                    <img src="assets/img/WeatherApp-JS.png" alt="">
                 </div>
 
                 <div class="swiper-slide" id="swiper-slide4">
                     <div class="swiper-overlay"></div>
-                    <img src="/assets/img/Nasa-IoTD.png" alt="">
+                    <img src="assets/img/Nasa-IoTD.png" alt="">
                 </div>
 
                 <div class="swiper-slide" id="swiper-slide5">
                     <div class="swiper-overlay"></div>
-                    <img src="/assets/img/Behance-Sitebuild.png" alt="">
+                    <img src="assets/img/Behance-Sitebuild.png" alt="">
                 </div>
 
             </div>
@@ -212,7 +212,7 @@
     <footer class="footer">
         <div class="footer-container">
             <a href="#" class="logo">
-                <img src="/assets/img/GS-logo.svg" alt="Logo" />
+                <img src="assets/img/GS-logo.svg" alt="Logo" />
                 <div class="logo-underline"></div>
             </a>
             <div class="footer-right">
@@ -224,7 +224,7 @@
 
 
                 </div>
-                <p class="rights">&copy All rights reserved. Created by Gabor Szabo</p>
+                <p class="rights">&copy; All rights reserved. Created by Gabor Szabo</p>
             </div>
 
         </div>
