Changed picture element to div

--- a/index.html
+++ b/index.html
@@ -140,10 +140,10 @@
 
     <div class="personal-container">
 
-        <picture class="profile-image">
+        <div class="profile-image">
             <p class="image-name">Gabor</p>
             <p class="image-name">Szabo</p>
-        </picture>
+        </div>
         <div class="introduction-text-container">
             <p class="introduction-text">Welcome to my portfolio page. I created this page to showcase my progress, if
                 you
