Scroll behavior added to name-container

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <section class="main-container">
         <div class="image-container"></div>
         <div class="name-container">
-            <h1 class="name">GABOR SZABO</h1>
+            <h1>GABOR SZABO</h1>
         </div>
         <div class="forward-icon-container">
             <a href="#portfolio"><i class="fa-solid fa-sort-down"></i></a>
