Name display changed

--- a/index.html
+++ b/index.html
@@ -70,7 +70,9 @@
 
     <!-- Main image -->
     <section class="main-container">
-        <div class="image-container"></div>
+        <div class="image-container">
+            <!-- <video src="video/Pexels Videos 2282013.mp4" loop autoplay muted></video> -->
+        </div>
         <div class="name-container">
             <h1>GABOR SZABO</h1>
         </div>
