scroll reveal, buttons css changed

--- a/index.html
+++ b/index.html
@@ -70,8 +70,10 @@
 
     <!-- Main image -->
     <section class="main-container">
+
         <div class="image-container">
-            <!-- <video src="video/Pexels Videos 2282013.mp4" loop autoplay muted></video> -->
+            <!--             <video src="/assets/video/Pexels Videos 2334654_M.mp4" loop autoplay muted></video>
+ -->
         </div>
         <div class="name-container">
             <h1>GABOR SZABO</h1>
@@ -193,8 +195,7 @@
                 class="contact-form-group">
                 <div class="sender-data-container">
                     <input type="text" name="name" class="sender-data" required placeholder="Name" autocomplete="off">
-                    <input type="email" name="email" class="sender-data" required placeholder="Email address"
-                        autocomplete="off">
+                    <input type="email" name="email" class="sender-data" required placeholder="Email address">
                 </div>
                 <textarea name="message" id="message" cols="30" rows="6" required placeholder="Write your message"
                     autocomplete="off"></textarea>
