--- a/index.html
+++ b/index.html
@@ -210,10 +210,13 @@
                         <input type="checkbox" name="checkbox" id="checkbox" required>
                         <label for="checkbox">I am not a robot and checked the message before sending.</label>
                     </div>
-                    <button type="submit" id="btn-send-message" disabled>
-                        <i class="fa-regular fa-envelope"></i>
-                        <p class="btn-send-text">Send message</p>
-                    </button>
+                    <div class="button-container">
+                        <div class="disabled-layer"></div>
+                        <button type="submit" id="btn-send-message">
+                            <i class="fa-regular fa-envelope"></i>
+                            <p class="btn-send-text">Send message</p>
+                        </button>
+                    </div>
                 </div>
             </form>
 
