Clear input fields improved

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js" defer></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
 
-    <script src="/data/portfolio.js"></script>
-    <script src="/data/web-skills.js"></script>
-    <script src="/data/design-skills.js"></script>
+    <script src="/data/portfolio.js defer"></script>
+    <script src="/data/web-skills.js defer"></script>
+    <script src="/data/design-skills.js defer"></script>
     <script src="/js/app.js" defer></script>
 
     <link rel="icon" href="assets/img/GS-icon.svg">
