email validation small detail added

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                     <input type="email" name="email" class="sender-data" required placeholder="Email address">
                 </div>
                 <div class="bad-email hidden">
-                    <p>I have found a problem with the email format try something similar: <br>example@example.com
+                    <p>I found a problem with the e-mail address format, try something similar: <br>example@example.com
                     </p>
                     <i class="fa-solid fa-xmark" id="email-alert-close"></i>
                 </div>
